[package]
name = "ness_app"
version = "0.1.1"
authors = ["Ru7139 <166471914+Ru7139@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*", features = ["fullstack", "router"] }
tracing-wasm = "*"
dioxus-logger = "*"

tokio = { version = "*", optional = true }
surrealdb = { version = "*", optional = true }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
once_cell = "*"



[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
# server = ["dioxus/server", "dep:tokio", "dep:surrealdb"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
