[package]
name = "dioxusap"
version = "0.1.0"
authors = ["Ru7139 <166471914+Ru7139@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*", features = ["router", "fullstack"] }
tokio = { version = "*", features = ["full"], optional = true }
surrealdb = { version = "*", features = [], optional = true }

serde = { version = "*", features = ["derive"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["surrealdb"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
