[package]
name = "dioxusap"
version = "0.1.0"
authors = ["Ru7139 <166471914+Ru7139@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
dioxus-server = { version = "0.7.0-rc.0", features = ["full"]}
dioxus-web = { version = "*", features = ["hydrate"], optional = true }
serde = { version = "*", features = ["derive"] }

tokio = { version = "*", features = ["full"], optional = true }
reqwest = { version = "*", optional = true }
axum = { version = "*", features = ["macros"], optional = true }

surrealdb = { version = "*", optional = true }

# axum_session = { version = "*", optional = true }
# axum_session_auth = { version = "*", optional = true }
# async-trait = { version = "*", optional = true }
# execute = "*"

[features]
default = ["web", "server"]
web = ["dioxus/web", "dep:dioxus-web"]
server = ["dioxus/server", "dep:tokio", "dep:reqwest" ,"dep:axum", "dep:surrealdb"]



[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
